# gargamel-ai

./: .gitignore  AGENTS.md  Makefile  README.md  config.example.py  eyes.py  face.py  faces.py  main.py  pyproject.toml  utils.py  weather.py  wifi.py
tests/: test_face.py  test_main.py  test_weather.py  test_wifi.py
