[project]
name = "gargamel-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "esptool>=5.2.0",
    "mpremote>=1.28.0",
    "mpy-cross>=1.27.0.post2",
]

[dependency-groups]
dev = [
    "micropython-esp32-stubs>=1.28.0.post1",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["."]
exclude = [".venv", "__pycache__"]

typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "Linux"
reportMissingModuleSource = "none"
