[project]
name = "gargamel-ai"
version = "0.1.0"
description = "MicroPython face animations and weather display for an ESP32 SSD1306 OLED"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "esptool>=5.2.0",
    "mpremote>=1.28.0",
    "mpy-cross>=1.27.0.post2",
]

[dependency-groups]
dev = [
    "coverage>=7.0",
    "micropython-esp32-stubs>=1.28.0.post1",
    "pyright>=1.1.407",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["."]
exclude = [".venv", "__pycache__", "typings"]

typeCheckingMode = "basic"
pythonVersion = "3.14"
venv = ".venv"
venvPath = "."
pythonPlatform = "Linux"
reportMissingModuleSource = "none"
